# wingpanel-indicator-workspaces

./: README.md  meson.build
data/: workspaces.gresource.xml
debian/: changelog  control  copyright  rules
src/: Indicator.vala
src/Services/: WorkspacesManager.vala
src/Widgets/: Panel.vala  Popover.vala
